<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="jobtrends.jobsurvey.viewmodel.SignUpViewModel">

  <data>
    <variable name="vm"
              type="jobtrends.jobsurvey.viewmodel.SignUpViewModel"/>
  </data>

  <ScrollView android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/margin_bottom"
                  android:paddingEnd="@dimen/margin_right"
                  android:paddingStart="@dimen/margin_left"
                  android:paddingTop="@dimen/margin_top">

      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"
                android:text="@string/sign_up_view_txt_0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"/>

      <android.support.v7.widget.CardView android:layout_width="match_parent"
                                          android:layout_height="wrap_content"
                                          android:layout_marginBottom="@dimen/margin_bottom"
                                          android:layout_marginEnd="@dimen/margin_right"
                                          android:layout_marginStart="@dimen/margin_left"
                                          android:layout_marginTop="@dimen/margin_top"
                                          app:cardCornerRadius="8dp"
                                          app:cardElevation="8dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginBottom="@dimen/margin_bottom"
                      android:layout_marginEnd="@dimen/margin_right"
                      android:layout_marginStart="@dimen/margin_left"
                      android:layout_marginTop="@dimen/margin_top"
                      android:orientation="vertical">

          <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:gravity="center"
                    android:text="@string/sign_up_view_txt_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/sign_up_view_txt_2"
                    android:inputType="textPersonName"
                    android:text="@={vm.userModel.lastName}"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/sign_up_view_txt_3"
                    android:inputType="textPersonName"
                    android:text="@={vm.userModel.firstName}"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/sign_up_view_txt_4"
                    android:inputType="date"
                    android:text="@={vm.userModel.birthday}"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/sign_up_view_txt_5"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.userModel.email}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:errorText="@{vm.emailErrorText}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/sign_up_view_txt_6"
                    android:inputType="text"
                    android:text="@={vm.userModel.metier}"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/sign_up_view_txt_7"
                    android:inputType="textPassword"
                    android:text="@={vm.userModel.password}"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/sign_up_view_txt_8"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

          <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:gravity="center"
                    android:text="@string/sign_up_view_txt_9"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

        </LinearLayout>

      </android.support.v7.widget.CardView>

      <Button android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginBottom="@dimen/margin_bottom"
              android:layout_marginTop="@dimen/margin_top"
              android:background="@drawable/rounded_layout"
              android:onClick="@{() -> vm.onClick()}"
              android:paddingLeft="@dimen/button_padding"
              android:paddingRight="@dimen/button_padding"
              android:text="@string/sign_up_view_txt_10"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textColor="@color/colorButtonLight"/>

    </LinearLayout>

  </ScrollView>

</layout>
