<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="jobtrends.jobsurvey.fragment.ProfileFragment">

  <data>
    <variable name="profileFragment"
              type="jobtrends.jobsurvey.fragment.ProfileFragment"/>
    <variable name="userModel"
              type="jobtrends.jobsurvey.model.UserModel"/>
    <variable name="errorModel"
              type="jobtrends.jobsurvey.model.ErrorModel"/>
  </data>

  <ScrollView android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="@dimen/divider">

      <android.support.v7.widget.CardView android:layout_width="match_parent"
                                          android:layout_height="0dp"
                                          android:layout_marginTop="@dimen/divider"
                                          android:layout_weight="2"
                                          app:cardCornerRadius="8dp"
                                          app:cardElevation="8dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:padding="@dimen/divider">

          <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_view_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_2"
                    android:inputType="textPersonName"
                    android:text="@={userModel.lastName}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.lastnameMsg}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_3"
                    android:inputType="textPersonName"
                    android:text="@={userModel.firstName}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.firstnameMsg}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_4"
                    android:inputType="date"
                    android:text="@={userModel.birthday}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.birthdayMsg}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_5"
                    android:inputType="textEmailAddress"
                    android:text="@={userModel.email}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.emailMsg}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_6"
                    android:inputType="text"
                    android:text="@={userModel.job}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.jobMsg}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_7"
                    android:inputType="textPassword"
                    android:text="@={profileFragment.oldPassword}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.oldPassword}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_8"
                    android:inputType="textPassword"
                    android:text="@={userModel.password}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.passwordMsg}"/>

          <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/profile_view_9"
                    android:inputType="textPassword"
                    android:text="@={userModel.passwordProtection}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/primary"
                    app:errorText="@{errorModel.passwordBisMsg}"/>

        </LinearLayout>

      </android.support.v7.widget.CardView>

      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@={errorModel.mainMsg}"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_light"/>

      <android.support.v7.widget.AppCompatButton android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:layout_gravity="center"
                                                 android:layout_marginTop="@dimen/margin"
                                                 android:background="@drawable/rounded_layout"
                                                 android:onClick="@{() -> profileFragment.onClick()}"
                                                 android:paddingLeft="32dp"
                                                 android:paddingRight="32dp"
                                                 android:text="@string/profile_view_10"
                                                 android:textAppearance="@style/TextAppearance.AppCompat.Button"
                                                 android:textColor="@color/white"/>

    </LinearLayout>

  </ScrollView>

</layout>
