<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="jobtrends.jobsurvey.viewmodel.SignInViewModel">

  <data>
    <variable name="vm"
              type="jobtrends.jobsurvey.viewmodel.SignInViewModel"/>
  </data>

  <ScrollView android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="@dimen/margin_top"
                  android:paddingEnd="@dimen/margin_right"
                  android:paddingBottom="@dimen/margin_bottom"
                  android:paddingStart="@dimen/margin_left"
                  android:layout_gravity="center"
                  android:orientation="vertical">

      <ImageView android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/margin_top"
                 android:src="@drawable/ic_logo_gray"/>

      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"
                android:text="@string/sign_in_view_txt_0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"/>

      <!--android:drawableStart="@drawable/ic_email_orange_16dp"-->
      <EditText android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:hint="@string/sign_in_view_txt_1"
                android:inputType="textEmailAddress"
                android:text="@={vm.username}"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

      <!--android:drawableStart="@drawable/ic_lock_orange_16dp"-->
      <EditText android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:hint="@string/sign_in_view_txt_2"
                android:inputType="textPassword"
                android:text="@={vm.password}"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@={vm.error}"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_light"/>

      <Button android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:background="@drawable/rounded_layout"
              android:onClick="@{() -> vm.onClickSignIn()}"
              android:paddingLeft="32dp"
              android:paddingRight="32dp"
              android:text="@string/sign_in_view_txt_3"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textColor="@color/colorButtonLight"/>

      <Button android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="right"
              android:layout_marginTop="@dimen/margin_top"
              android:layout_marginBottom="@dimen/margin_bottom"
              android:background="@drawable/rounded_layout"
              android:onClick="@{() -> vm.onClickSignUp()}"
              android:paddingLeft="32dp"
              android:paddingRight="32dp"
              android:text="@string/sign_in_view_txt_4"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textColor="@color/colorButtonLight"/>

    </LinearLayout>

  </ScrollView>

</layout>
