<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="jobtrends.job_aymax.viewmodel.CancelPopupViewModel">

	<data>
		<variable name="vm" type="jobtrends.job_aymax.viewmodel.SurveyViewModel"/>
	</data>

	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="match_parent"
	              android:orientation="vertical"
	              android:weightSum="2">

		<TextView android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:layout_margin="16dp"
		          android:gravity="center"
		          android:layout_weight="1"
		          android:textColor="@color/colorAccent"
		          android:text="@string/cancel_popup_view_txt_0"
		          android:textAppearance="?android:attr/textAppearanceLarge"/>

		<LinearLayout android:layout_width="match_parent"
		              android:layout_height="wrap_content"
		              android:orientation="horizontal"
		              android:layout_weight="1"
		              android:weightSum="2">

			<Button android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_margin="16dp"
			        android:layout_weight="1"
			        android:onClick="@{() -> vm.onCloseNo()}"
			        android:background="@drawable/outline_layout"
			        android:text="@string/cancel_popup_view_txt_1"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:textColor="@color/colorButtonDark"/>

			<Button android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_margin="16dp"
			        android:layout_weight="1"
			        android:onClick="@{() -> vm.onCloseYes()}"
			        android:background="@drawable/rounded_layout"
			        android:text="@string/cancel_popup_view_txt_2"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:textColor="@color/colorButtonLight"/>

		</LinearLayout>

	</LinearLayout>

</layout>
